--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,10 +38,10 @@ nav {
 }
 nav a {
 	top: 22px;
-    height: 22.5px;
-    line-height: 1.1;
+    height: 21px;
+    line-height: 1.5;
     position: relative;
-	font-family: "Caveat Brush", serif;
+	font-family: "Josefin Sans", serif;
 	text-decoration: none;
 	text-shadow: 2px 2px #ffffff;
     background-color: #fafad2;
@@ -50,7 +50,7 @@ nav a {
 	letter-spacing: 1px;
     margin: 0px 16px 0px 16px;
     padding: 1px 5px;
-    font-size: 1.3rem;
+    font-size: 1.04rem;
     font-weight: normal;
     color: black;
     bottom: 7px;
@@ -91,7 +91,7 @@ nav a:hover {
     font-weight: normal;
 }
 .top-banner h3 {
-	font-family: "";
+	font-family: "Times New Roman", serif;
 	margin: 20px 0px 30px 3px;
 	letter-spacing: 2px;
     word-spacing: 8px;
@@ -102,8 +102,10 @@ nav a:hover {
 .button {
 	display: flex;
 	text-align: center;
-	padding: 8px 0px 8px 187px;
-	font-family: "Caveat Brush", serif;
+	padding: 13px 0px 8px 182px;
+	line-height: 0.8;
+	font-family: "Josefin Sans", serif;
+	font-weight: normal;
 	color: black;
 	border: solid 3px black;
     letter-spacing: 2px;
@@ -153,16 +155,16 @@ nav a:hover {
 }
 .top-section p {
 	width: 100%;
-	
+	font-family: serif, "EB Garamond";
 	font-size: 1.1rem;
 	line-height: 1.4;
 	letter-spacing: 1px;
 	word-spacing: 2px; 
-	margin: -9px 0px 11.5px 0px;
+	margin: -9px 0px 11.4px 0px;
 	font-weight: normal;
 }
 .top-section div {
-	font-family: "";
+	font-family: serif, "EB Garamond";
 	letter-spacing: 0.8px;
 	font-size: 1rem;
 	font-weight: normal;
@@ -212,7 +214,7 @@ nav a:hover {
 	font-weight: normal;
 	text-shadow: 2px 2px #ffff33;
 	margin: 30px 0px -10px 0px;
-	font-family: "Josefin Sans", serif;
+	font-family: "Josefin Sans";
 }
 
 .info-images section{
@@ -246,7 +248,7 @@ nav a:hover {
 .Careers h2 {
 	position: relative;
 	top: 32px;
-	font-family: "Kranky", serif;
+	font-family: "Kranky";
 	font-weight: normal;
 	font-size: 2.9rem;
 	text-align: center;
@@ -273,7 +275,7 @@ nav a:hover {
 }
 
 .Boxes h3 {
-    font-family: "EB Garamond", serif;
+    font-family: serif, "EB Garamond";
     margin: 16px 0px 8px 16px;
 }
 
@@ -307,8 +309,16 @@ nav a:hover {
 	margin: 0px 24px 24px 24px;
 }
 
+.Thesis-content .top-section h3 {
+	font-family: "Josefin Sans";
+	text-shadow: 2px 2px #ffff33;
+	font-weight: normal;
+	font-size: 1.8rem;
+}
+
 .Thesis-content video {
 	width: 100%;
+	border: solid 4px #d3d3d3;
 }
 
 .Thesis-content .images {
@@ -336,7 +346,7 @@ nav a:hover {
 
 .Thesis-content .images img {
 	width: 35%;
-	height: 11.1rem;
+	height: 11.4rem;
 	border: solid 4px #d3d3d3;
 	border-radius: 20px;
 }
@@ -353,10 +363,10 @@ nav a:hover {
 	width: 100%;
 	font-family: "josefin Sans";
 	font-size: 1.8rem;
-	line-height: 1.1;
+	line-height: 1.3;
 	font-weight: normal;
 	text-shadow: 2px 2px #ffff33;
-	margin-bottom: -6px;
+	margin-bottom: -10px;
 }
 
 footer  {
