--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -286,6 +286,8 @@ nav a:hover {
 .Boxes p {
 	margin: 8px 0px 24px 16px;
 	line-height: 1.4rem;
+	font-family: serif;
+	font-size: 1.1rem;
 }
 
 
@@ -298,22 +300,29 @@ nav a:hover {
 	font-size: 2.9rem;
 	font-weight: normal;	
 	text-shadow: 3px 3px #ffff33;
+	margin: 32px 0px 32px 0px
 }
 
 .Thesis-content {
 	display: flex;
+	border-bottom: solid 1px #d3d3d3;
 }
 
 .Thesis-content .top-section {
 	width: 60%;
-	margin: 0px 24px 24px 24px;
+	margin: 0px 24px 32px 24px;
 }
 
 .Thesis-content .top-section h3 {
 	font-family: "Josefin Sans";
 	text-shadow: 2px 2px #ffff33;
+	margin: 24px 0px 0px 0px;
 	font-weight: normal;
 	font-size: 1.8rem;
+}
+
+.Thesis-content .top-section p {
+	margin: 8px 0px 0px 0px;
 }
 
 .Thesis-content video {
@@ -329,6 +338,7 @@ nav a:hover {
 
 .Thesis-content .images div {
 	width: 100%;
+	height: 31%;
 	display: flex;
 	background-color: #fafad2;
 	border: solid 1px #d3d3d3;
@@ -346,7 +356,7 @@ nav a:hover {
 
 .Thesis-content .images img {
 	width: 35%;
-	height: 11.4rem;
+	height: 11.1rem;
 	border: solid 4px #d3d3d3;
 	border-radius: 20px;
 }
@@ -376,7 +386,10 @@ footer  {
 }
 
 footer span {
-	font-size: 1rem;
-	padding-right: 20px;
+	font-size: 1rem;	
+	margin: 16px 24px 32px 24px;
+}
 
+footer .terms {
+	word-spacing: 10px;
 }
