--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -37,11 +37,11 @@ nav {
 	margin-right: 9px;
 }
 nav a {
-	top: 22px;
+	top: 19px;
     height: 21px;
-    line-height: 1.5;
+    line-height: 0.8;
     position: relative;
-	font-family: "Josefin Sans", serif;
+	font-family: "Caveat Brush";
 	text-decoration: none;
 	text-shadow: 2px 2px #ffffff;
     background-color: #fafad2;
@@ -49,8 +49,8 @@ nav a {
     border-radius: 20px;
 	letter-spacing: 1px;
     margin: 0px 16px 0px 16px;
-    padding: 1px 5px;
-    font-size: 1.04rem;
+    padding: 1.5px 5px;
+    font-size: 1.4rem;
     font-weight: normal;
     color: black;
     bottom: 7px;
@@ -102,9 +102,9 @@ nav a:hover {
 .button {
 	display: flex;
 	text-align: center;
-	padding: 13px 0px 8px 182px;
+	padding: 12px 0px 12px 186px;
 	line-height: 0.8;
-	font-family: "Josefin Sans", serif;
+	font-family: "Caveat Brush";
 	font-weight: normal;
 	color: black;
 	border: solid 3px black;
@@ -205,6 +205,7 @@ nav a:hover {
 	border: solid 4px #d3d3d3;
 	border-radius: 20px;
 	margin: 0px 0px 16px 16px;
+	box-shadow: 4px 5px black;
 }
 
 .info-images h3 {
@@ -285,7 +286,7 @@ nav a:hover {
 
 .Boxes p {
 	margin: 8px 0px 24px 16px;
-	line-height: 1.4rem;
+	line-height: 1.5rem;
 	font-family: serif;
 	font-size: 1.1rem;
 }
@@ -359,6 +360,7 @@ nav a:hover {
 	height: 11.1rem;
 	border: solid 4px #d3d3d3;
 	border-radius: 20px;
+	box-shadow: 4px 5px black;
 }
 
 .Thesis-content .images section {
@@ -383,13 +385,14 @@ footer  {
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
+	margin: 16px 0px 32px 24px;
 }
 
 footer span {
 	font-size: 1rem;	
-	margin: 16px 24px 32px 24px;
 }
 
 footer .terms {
 	word-spacing: 10px;
+	margin-right: 48px;
 }
