--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,7 +27,6 @@ header div {
 	height: 3.5rem;
 	margin-bottom: -17px;
 }
-
 header span {
 	text-shadow: 5px 5px #ffff33;
 	font-family: "Gloria Hallelujah";
@@ -38,8 +37,8 @@ nav {
 }
 nav a {
 	top: 19px;
-    height: 21px;
-    line-height: 0.8;
+    height: 22.5px;
+    line-height: 0.9;
     position: relative;
 	font-family: "Caveat Brush";
 	text-decoration: none;
@@ -60,7 +59,6 @@ nav a:hover {
     box-shadow: 6px 6px 6px black;
     transition: background-color 350ms ease-out, box-shadow 350ms ease-out;
 }
-
 
 
 /*top-banner section*/ 
@@ -93,7 +91,7 @@ nav a:hover {
 .top-banner h3 {
 	font-family: serif;
 	margin: 20px 0px 30px 3px;
-	letter-spacing: 2px;
+	letter-spacing: 1.5px;
     word-spacing: 8px;
 	font-weight: normal;
 	font-size: 1.5rem;
@@ -125,9 +123,8 @@ nav a:hover {
 }
 
 
-
 /* main-content */
- /* Keep-Practicing */
+  /* top-section */
 .main-content {
 	display: flex;	
 	border-top: solid 1px #d3d3d3;
@@ -158,7 +155,7 @@ nav a:hover {
 	font-family: serif;
 	font-size: 1.1rem;
 	line-height: 1.4;
-	letter-spacing: 1px;
+	letter-spacing: 0.8px;
 	word-spacing: 2px; 
 	margin: -9px 0px 11.4px 0px;
 	font-weight: normal;
@@ -171,35 +168,33 @@ nav a:hover {
 	margin-bottom: 32px;
 	word-spacing: 1px;
 }
-.info-images {
+
+/* main-content */
+  /* (bottom)/(right) section */
+.main-content .info-images {
     width: 40%;
     display: flex;
     margin-left: 32px;
     margin-top: 32px;
     flex-direction: column;
 }  
-
-.info-images div {
+.main-content .info-images div {
 	display: flex;
 	border-bottom: solid 1px #d3d3d3;
 	border-left: solid 1px #d3d3d3;
 }
-
-.info-images div:first-child {
+.main-content .info-images div:first-child {
 	border-top: none;
 }
-
-.info-images div:nth-child(even) {
-	padding-top: 16px;
+.main-content .info-images div:nth-child(even) {
+    padding-top: 16px;
 }
-
-.info-images div:last-child {
-	padding-top: 16px;
-	background-color: #FAFAD2;
+.main-content .info-images div:last-child {
+    padding-top: 16px;
+    background-color: #FAFAD2;
 	border-bottom: none;
 }
-
-.info-images img {
+.main-content .info-images img {
 	width: 35%;
 	height: 11.1rem;
 	border: solid 4px #d3d3d3;
@@ -207,32 +202,34 @@ nav a:hover {
 	margin: 0px 0px 16px 16px;
 	box-shadow: 4px 5px black;
 }
-
-.info-images h3 {
+.main-content .info-images h3 {
 	width: 100%;
 	font-size: 1.8rem;
 	letter-spacing: 1px;
 	font-weight: normal;
 	text-shadow: 2px 2px #ffff33;
-	margin: 30px 0px -10px 0px;
+	margin: 0px 0px 8px 0px;
 	font-family: "Josefin Sans";
 }
-
-.info-images section{
+.main-content .info-images section{
 	width: 65%;
-	margin-left: 16px;
+	margin: 40px 0px 0px 16px;
 	flex-direction: column;
 	letter-spacing: 0.8px;
 	font-size: 1.1rem;
 }
-
-.info-images a {
+.main-content .info-images span {
+    letter-spacing: 0.8px;
+}
+.main-content .info-images p {
+	margin-top: 8px;
+}
+.main-content .info-images a {
 	color: black;
 }
-
-.info-images a:hover {
+.main-content .info-images a:hover {
     color: #d3d3d3;
-    transition: color 150ms ease-in-out;
+    transition: color 150ms ease-in-out;  
 }
 
 
@@ -251,75 +248,77 @@ nav a:hover {
 	top: 32px;
 	font-family: "Kranky";
 	font-weight: normal;
-	font-size: 2.9rem;
+	font-size: 3rem;
 	text-align: center;
+	letter-spacing: 2px;
 	text-shadow: 3px 3px #ffff33;
     margin: 0px 0px 64px 0px;
 }
-
 .Boxes {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     width: 100%;
 }
-
 .Boxes div {
     background-color: #ffffff;
     border: solid 4px #d3d3d3;
-    margin-bottom: 32px;
+    margin: 0px 17px 32px 17px;
+    box-shadow: 5px 6px black;
+    border-radius: 24px;
     width: 26%;
 }
-
 .Boxes img {
 	width: 100%; 
+	border-bottom-left-radius: none;
+	border-bottom-right-radius: none;
+	border-top-right-radius: 20px;
+	border-top-left-radius: 20px;
 }
-
 .Boxes h3 {
     font-family: serif;
     margin: 16px 0px 8px 16px;
+    letter-spacing: 0.8px;
 }
-
 .Boxes span {
 	margin: 0px 0px 0px 16px;
+	letter-spacing: 0.7px;
 }
-
 .Boxes p {
 	margin: 8px 0px 24px 16px;
+	letter-spacing: 0.8px;
 	line-height: 1.5rem;
 	font-family: serif;
 	font-size: 1.1rem;
 }
 
 
-/*bottom-section */
+/*top-section */
  /*Thesis-Exibit */
-
 .title h2 {
 	text-align: center;
 	font-family: "Kranky";
-	font-size: 2.9rem;
-	font-weight: normal;	
+	font-size: 3rem;
+	font-weight: normal;
+	letter-spacing: 2px;	
 	text-shadow: 3px 3px #ffff33;
 	margin: 32px 0px 32px 0px
 }
-
 .Thesis-content {
 	display: flex;
 	border-bottom: solid 1px #d3d3d3;
 }
-
 .Thesis-content .top-section {
 	width: 60%;
 	margin: 0px 24px 32px 24px;
 }
-
 .Thesis-content .top-section h3 {
 	font-family: "Josefin Sans";
 	text-shadow: 2px 2px #ffff33;
 	margin: 24px 0px 0px 0px;
 	font-weight: normal;
 	font-size: 1.8rem;
+    letter-spacing: 1px;
 }
 
 .Thesis-content .top-section p {
@@ -366,8 +365,6 @@ nav a:hover {
 .Thesis-content .images section {
 	margin-left: 16px;
 	width: 50%;
-	line-height: 1.4;
-	letter-spacing: 0.8px;
 	font-size: 1.1rem;
 }
 
@@ -375,10 +372,15 @@ nav a:hover {
 	width: 100%;
 	font-family: "Josefin Sans";
 	font-size: 1.8rem;
-	line-height: 1.3;
+	line-height: 1.2;
 	font-weight: normal;
+	letter-spacing: 1px;
 	text-shadow: 2px 2px #ffff33;
-	margin-bottom: -10px;
+	margin-bottom: 8px;
+}
+
+.Thesis-content .images span {
+	letter-spacing: 0.8px;
 }
 
 footer  {
