--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -37,6 +37,7 @@ nav {
 }
 nav a {
 	top: 19px;
+	width: 100%;
     height: 22.5px;
     line-height: 0.9;
     position: relative;
@@ -58,6 +59,16 @@ nav a:hover {
 	background-color: #ffff33;
     box-shadow: 6px 6px 6px black;
     transition: background-color 350ms ease-out, box-shadow 350ms ease-out;
+}
+
+@media only screen and (max-width: 480px) {
+	header nav .mobile-nav-container {
+		display: block;
+	}
+}
+
+header .mobile-nav-container {
+	display: none;
 }
 
 
@@ -347,6 +358,9 @@ nav a:hover {
 .Thesis-content .images div:first-child {
     border-top: none;
     border-bottom: none;
+}
+.Thesis-content .images div:nth-child(2n+2) section {
+    margin-top: 25px;
 }
 .Thesis-content .images div:last-child {
 	border-bottom: none;
