--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -37,7 +37,6 @@ nav {
 }
 nav a {
 	top: 19px;
-	width: 100%;
     height: 22.5px;
     line-height: 0.9;
     position: relative;
@@ -61,15 +60,26 @@ nav a:hover {
     transition: background-color 350ms ease-out, box-shadow 350ms ease-out;
 }
 
-@media only screen and (max-width: 480px) {
-	header nav .mobile-nav-container {
-		display: block;
-	}
-}
 
-header .mobile-nav-container {
+
+/* header media queries header desktop */
+@media only screen and (max-width: 1024px) {
+
+.mobile-nav-container {
 	display: none;
 }
+}
+
+
+/* header media queries mobile */
+@media only screen and (max-width: 480px) {
+
+nav .desktop {
+	display: none;
+}  
+}
+
+
 
 
 /*top-banner section*/ 
