--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -69,14 +69,14 @@ nav a:hover {
     border-top: solid 1px #d3d3d3;
 }
 .top-banner img {
-	height: 550px;
+	height: 500px;
 	width: 57.5%;
 	margin: 32px 24px 32px 24px; 
 	border: solid 4px #d3d3d3;
 	border-radius: 20px;
 }
 .top-banner section  {
-    margin-top: 90px;
+    margin-top: 70px;
     margin-left: 0px;
 }
 .top-banner h1 {
@@ -398,8 +398,8 @@ footer .terms {
 
 
 
-/* Media Queries */
- 
+/* MEDIA QUERIES */
+/* DESKTOP MEDIA QUERIES */
 
 /* header desktop 880px mq */
 @media only screen and (min-width: 880px) {
@@ -435,7 +435,6 @@ header nav a {
 	height: 16px;
 	font-size: 0.9rem;
 }
-
 }
 
 @media only screen and (max-width: 1234px) {
@@ -445,16 +444,17 @@ header nav a {
 }
 
 @media only screen and (max-width: 1099px) {
-	.top-banner section {
-		margin-top: 45px;
+.top-banner section {
+		margin-top: 20px;
 	}
 }
+
 
  /* top-banner desktop 1049px mq */
 @media only screen and (max-width: 1080px) {
 
 .top-banner section {
-	margin-top: 45px;
+	margin-top: 20px;
 }
 
 .top-banner h3 {
@@ -464,7 +464,6 @@ header nav a {
 .button {
 	font-size: 1.4rem;
 }
-
 }
 
 /* top-banner desktop 866px mq */
@@ -482,9 +481,17 @@ header nav a {
 .button {
 	font-size: 1.3rem;
 }
+}
+/* top-banner desktop 825px mq */
+@media only screen and (max-width: 825px)  {
 
+.top-banner section {
+	margin-top: 27px;
+	}
 }
 
+
+/* MOBILE MEDIA QUERIES */
 
 /* header mobile 660px mq */  
 @media only screen and (max-width: 725px) {
@@ -533,7 +540,6 @@ nav.mobile-nav-container {
 	margin-right: 16px;
 	font-size: 1.3rem;
 }
-
 }
 
 /* top-banner mobile 480px mq */
@@ -551,6 +557,8 @@ nav.mobile-nav-container {
 	font-size: 1.1rem;
 	padding: 9px 0px 9px 0px;
 }
+}
+
 
 /* top-banner mobile 380px mq */
 @media only screen and (max-width: 380px) {
@@ -563,7 +571,6 @@ nav.mobile-nav-container {
 	font-size: 1rem;
 	padding: 7px 0px 7px 0px;
 }
-
 }
 
 /* top-banner mobile 310px mq */
