--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,7 +38,7 @@ nav {
 nav a {
 	top: 19px;
     height: 22.5px;
-    line-height: 1.2;
+    line-height: 1.4;
     position: relative;
 	font-family: "Caveat Brush";
 	text-decoration: none;
@@ -49,7 +49,7 @@ nav a {
 	letter-spacing: 1px;
     margin: 0px 16px 0px 16px;
     padding: 1.5px 5px;
-    font-size: 1.1rem;
+    font-size: 0.9rem;
     font-weight: normal;
     color: black;
     bottom: 7px;
@@ -180,6 +180,7 @@ nav a:hover {
     flex-direction: column;
 }  
 .main-content .info-images div {
+	width: 100%;
 	display: flex;
 	border-bottom: solid 1px #d3d3d3;
 	border-left: solid 1px #d3d3d3;
@@ -192,7 +193,7 @@ nav a:hover {
 }
 .main-content .info-images div:last-child {
     padding-top: 16px;
-    background-color: #FAFAD2;
+    background-color: #fafad2;
 	border-bottom: none;
 }
 .main-content .info-images img {
@@ -399,9 +400,8 @@ footer .terms {
 
 
 
-/* MEDIA QUERIES */
-/* DESKTOP MEDIA QUERIES */
 
+  /* DESKTOP MEDIA QUERIES */
 /* header desktop 880px mq */
 @media only screen and (min-width: 880px) {
 
@@ -438,20 +438,42 @@ header nav a {
 }
 }
 
+/* header desktop 725px mq */  
+@media only screen and (max-width: 725px) {
+
+nav.desktop {
+	display: none;
+}
+
+header div {
+	display: none;
+}
+
+nav.mobile-nav-container {
+	display: flex;
+	justify-content: space-evenly;
+    width: 100%;
+}
+}
+
+
+  /* TOP-BANNER */
+/* top-banner desktop 1234px mq */
 @media only screen and (max-width: 1234px) {
-	.top-banner section {
+
+.top-banner section {
 		margin-top: 65px;
 	}
 }
 
 @media only screen and (max-width: 1099px) {
+
 .top-banner section {
 		margin-top: 20px;
 	}
 }
 
-
- /* top-banner desktop 1049px mq */
+ /* top-banner desktop 1080px mq */
 @media only screen and (max-width: 1080px) {
 
 .top-banner section {
@@ -483,6 +505,7 @@ header nav a {
 	font-size: 1.3rem;
 }
 }
+
 /* top-banner desktop 825px mq */
 @media only screen and (max-width: 825px)  {
 
@@ -491,38 +514,19 @@ header nav a {
 	}
 }
 
-
-
-
-/* MOBILE MEDIA QUERIES */
-
-/* header mobile 660px mq */  
+/* top-banner desktop 725px mq */
 @media only screen and (max-width: 725px) {
-
-nav.desktop {
-	display: none;
-}
-
-header div {
-	display: none;
-}
-
-nav.mobile-nav-container {
-	display: flex;
-	justify-content: space-evenly;
-    width: 100%;
-}
 
 .top-banner {
 	display: block;
 }
 
 .top-banner img {
+	display: block;
 	width: 100%;
 	height: 300px;
 	margin: 0px 0px -23px 0px;
 	border-radius: 0px;
-
 }
 
 .top-banner section {
@@ -546,6 +550,8 @@ nav.mobile-nav-container {
 }
 }
 
+
+   /* MOBILE */
 /* top-banner mobile 480px mq */
 @media only screen and (max-width: 480px) {
 	
@@ -592,6 +598,17 @@ nav.mobile-nav-container {
 }
 }
 
+
+
+
+
+
+
+
+
+
+
+
 /* MAIN-CONTENT DESKTOP*/
 
 /* main-content desktop 725px */
@@ -603,25 +620,35 @@ nav.mobile-nav-container {
 
 .main-content .info-images {
     width: 100%;
-    margin: 16px 16px 0px 16px;
-
+    margin: 16px 0px 0px 0px;
 }
+
 .main-content .info-images div {
 	display: flex;
 	flex-wrap: wrap;
 	border: none;
 }
+.main-content .info-images div:last-child {
+	width: 100%;
+	background-size: cover;
+}
 
 .main-content .info-images img {
+	display: block;
 	width: 100%;
 	height: auto;
 	margin: 0;
 	border-radius: 0px;
+	margin: 0px 16px 0px 16px;
+}
+.main-content .info-images span, p {
+	display: block;
 }
 
 .main-content .info-images section {
-    margin: 32px 0px 32px 16px;
+    margin: 32px 0px 32px 32px;
 }
+
 .main-content .info-images h3 {
 	font-size: 1.6rem;
 }
@@ -641,20 +668,23 @@ nav.mobile-nav-container {
 	margin: 1px 0px 43px 0px;
 }
 
-.Boxes {
+.Careers .Boxes {
 	display: flex;
 	flex-direction: column;
 }
-.Boxes div {
+.Careers .Boxes div {
 	width: 100%;
 	border-radius: 0px;
 	margin-left: 0px;
 }
-.Boxes img ,span, p {
+.Careers.Boxes div, 
+      img, span, p  {
 	display: none;
 }
-.Boxes h3 {
+.Careers .Boxes h3 {
+	display: block;
 	width: 100%;
+
 	
 }
 }
