--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,7 +38,7 @@ nav {
 nav a {
 	top: 19px;
     height: 22.5px;
-    line-height: 1.4;
+    line-height: 0.9;
     position: relative;
 	font-family: "Caveat Brush";
 	text-decoration: none;
@@ -49,7 +49,7 @@ nav a {
 	letter-spacing: 1px;
     margin: 0px 16px 0px 16px;
     padding: 1.5px 5px;
-    font-size: 0.9rem;
+    font-size: 1.4rem;
     font-weight: normal;
     color: black;
     bottom: 7px;
@@ -641,9 +641,6 @@ nav.mobile-nav-container {
 	border-radius: 0px;
 	margin: 0px 16px 0px 16px;
 }
-.main-content .info-images span, p {
-	display: block;
-}
 
 .main-content .info-images section {
     margin: 32px 0px 32px 32px;
@@ -652,12 +649,20 @@ nav.mobile-nav-container {
 .main-content .info-images h3 {
 	font-size: 1.6rem;
 }
+
+.main-content .info-images span {
+    display: block;
+}
+.main-content .info-images p {
+	display: block;
+}
 }
 
 
 /* MAIN-SECTION - CAREERS */
 /* Start-learning desktop 725px */
 @media only screen and (max-width: 725px) {
+
 .Careers {
 	width: 100%;
 	text-align: center;
@@ -672,19 +677,19 @@ nav.mobile-nav-container {
 	display: flex;
 	flex-direction: column;
 }
+
 .Careers .Boxes div {
 	width: 100%;
 	border-radius: 0px;
 	margin-left: 0px;
 }
-.Careers.Boxes div, 
-      img, span, p  {
+
+.Careers .Boxes img, span, p  {
 	display: none;
 }
+
 .Careers .Boxes h3 {
 	display: block;
-	width: 100%;
-
-	
+	width: 100%;	
 }
 }
